@@ -254,4 +254,8 @@ int	PROC_INFO(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *
 int	NET_IF_LIST(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
 #endif /* _WINDOWS */
 
+#ifdef _AIX
+int	SYSTEM_STAT(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
+#endif	/* _AIX */
+
 #endif
