@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [DEV-445] added support of system.stat[] under AIX (Sasha)
  - [ZBX-1633] fixed sysmaps in PostgreSQL upgrade patch (Sasha)
  - [ZBX-1617] fixed triggers duplicating in template linking for discovered hosts (Sasha)
  - [ZBX-1840] fixed bad performance of the node synchronization - fixed database index (Sasha)
